--- a/AdmPersonalTrainer/Abstraccion/Abstraccion.csproj
+++ b/AdmPersonalTrainer/Abstraccion/Abstraccion.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAdministrable.cs" />
     <Compile Include="IIdentity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
