--- a/AdmPersonalTrainer/Mapper/Mapper.csproj
+++ b/AdmPersonalTrainer/Mapper/Mapper.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MPPCliente.cs" />
+    <Compile Include="MPPCuenta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
