--- a/AdmPersonalTrainer/Utility/Utility.csproj
+++ b/AdmPersonalTrainer/Utility/Utility.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Verificador.cs" />
     <Compile Include="VerificadorCliente.cs" />
+    <Compile Include="VerificadorCuenta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
