--- a/AdmPersonalTrainer/AdmPersonalTrainer/AdmPersonalTrainer.csproj
+++ b/AdmPersonalTrainer/AdmPersonalTrainer/AdmPersonalTrainer.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Clientes\Cuentas.Designer.cs">
       <DependentUpon>Cuentas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Clientes\RutinaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Clientes\RutinaForm.Designer.cs">
+      <DependentUpon>RutinaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Iniciar Sesion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Clientes\Cuentas.resx">
       <DependentUpon>Cuentas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Clientes\RutinaForm.resx">
+      <DependentUpon>RutinaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Iniciar Sesion.resx">
       <DependentUpon>Iniciar Sesion.cs</DependentUpon>
@@ -150,6 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-money-32 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8-fit-301.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
